[tool.poetry]
name = "tnml"
version = "0.1.0"
description = ""
authors = ["Fergus Barratt <fergus.barratt00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xmps = {git = "https://github.com/fergusbarratt/xmps.git"}
matplotlib = "^3.4.2"
numpy = " >=1.17, <=1.20.1"
tensorflow = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
